<resources>
    <string name="app_name">Food For You</string>
    <string name="hello_food">Hello Food !!</string>
    <string name="food_for_you">food for you</string>
    <string name="design_by_dinoco">Design by Dinoco</string>
    <string name="nav_home">Home</string>
    <string name="nav_rec">Rekomendasi</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_tips">Tips</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_bmi">Body Mass Index : </string>
    <string name="quick_access_label">Quick Access</string>
    <string name="quick_access_caption">Find your best food menu</string>
    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="tips_info_placeholder">Here is some news</string>
    <string name="male_radio_label">Male</string>
    <string name="female_radio_label">Female</string>
    <string name="mail_label">Enter your name</string>
    <string name="level_activity_label">Level Activity :</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>

    //food delete add edit
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="parent">Parent</string>
    <string name="barcode">Barcode</string>
    <string name="category">Category</string>
    <string name="main">Main</string>
    <string name="general">Food Information</string>

    //home edit delete select
    <string name="portion_size">Portion size</string>
    <string name="pcs">pcs</string>
    <string name="unlink">Unlink</string>
    <string name="gram">gram</string>
    <string name="edit">Edit</string>
    <string name="select_meal">Select meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="before_training">Before training</string>
    <string name="after_training">After training</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="supper">Supper</string>

    //goal edit
    <string name="goal_tilte">Goal Status</string>
    <string name="status">Status</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target weight</string>
    <string name="kg">kg</string>
    <string name="i_want_to">I want to</string>
    <string name="weekly_goal">Weekly goal </string>
    <string name="kg_each_week">(kg each week)</string>
    <string name="activity_level">Activity level</string>
    <string name="numbers">Numbers</string>
    <string name="if_you_want_to_loose_weight">If you want to loose weight</string>
    <string name="if_you_want_to_keep_your_weight">If you want to keep your weight</string>
    <string name="with_activity_">With activity</string>
    <string name="without_activity">Without activity</string>
    <string name="target">Target</string>
    <string name="method">Method</string>
    <string name="activity">Activity</string>
    <string name="advanced">Advanced</string>

    //food view
    <string name="name">Name</string>
    <string name="manufactor">Manufactor</string>
    <string name="about">About</string>
    <string name="description">Description</string>
    <string name="calories_table">Calories table</string>
    <string name="energy">Energy</string>
    <string name="proteins">Proteins</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="per_hundred_gran">(Per 100 gram)</string>
    <string name="per_meal">Per meal</string>
    <string name="serving">Serving</string>
    <string name="sub">Sub</string>
    <string name="mesurment">Mesurment</string>
    <string name="word">Word</string>

    //diary
    <string name="add_to_diary">Add to diary</string>
    <!--<string-array name="tips_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
    </string-array>

    <string-array name="tips_info">
        <item>Here is some Baseball news!</item>
        <item>Here is some Badminton news!</item>
        <item>Here is some Basketball news!</item>
        <item>Here is some Bowling news!</item>
    </string-array>-->

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="add_food">Add Food</string>
    <string name="edit_food">Edit Food</string>
    <string name="delete_food">Delete Food</string>
    <string name="blank" />
    <string name="logout">Delete Account</string>
    <string name="food_size">Size</string>
    <string name="food_mesurment">mesurment</string>
    <string name="food_number">Number</string>
    <string name="food_word">word</string>
    <string name="food_energy">energy</string>
    <string name="food_protein">proteins</string>
    <string name="food_carbs">carbs</string>
    <string name="food_fat">Fat</string>
    <string name="food_size_pcs">size</string>
    <string name="food_portion">Portion size</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_target">Edit Target</string>

    <string-array name="array_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="array_weekly_goals">
        <item>Loose weight</item>
        <item>Gain weight</item>
    </string-array>

    <string-array name="array_categories_parent">
        <item>Bread</item>
        <item>Cheese</item>
        <item>Dairy and eggs</item>
    </string-array>

    <string-array name="array_food_sub">
        <item>Health</item>
        <item>Meal substitutes</item>
        <item>Protein bars</item>
    </string-array>

    <string-array name="array_weekly_goals_kg">
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
    </string-array>

    <string-array name="array_mesurments">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="array_activity_levels">
        <item>Little to no exercise</item>
        <item>Light exercise (1–3 days per week)</item>
        <item>Moderate exercise (3–5 days per week)</item>
        <item>Heavy exercise (6–7 days per week)</item>
        <item>Very heavy exercise (twice per day, extra heavy workouts)</item>
    </string-array>

</resources>
