<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="13dp"
        android:orientation="vertical">

        <!-- Headline -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewViewFoodName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/arialbold"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textColor="@color/titleColor"
                    android:textSize="18sp" />


                <ImageView
                    android:id="@+id/imageViewAddToDiary"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="12dp"
                    app:srcCompat="@drawable/button_add_ws" />


            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textViewViewFoodManufactorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manufactor"
            android:textColor="@color/captionColor"
            android:textSize="12sp" />
        <!-- //Headline -->


        <!-- Image -->
        <ImageView
            android:id="@+id/imageViewViewFoodImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp" />

        <!-- //Image -->

        <!-- About -->
        <TextView
            android:id="@+id/textViewViewFoodAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arialregular"
            android:text="@string/about" />
        <!-- //About -->

        <!-- Description -->
        <TextView
            android:id="@+id/textViewViewFoodDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arialregular"
            android:text="@string/description" />
        <!-- //Description -->


        <!-- Calories table -->
        <TextView
            android:id="@+id/textViewViewFoodCaloriesTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/arialregular"
            android:text="@string/calories_table"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_table">

                <TextView
                    android:id="@+id/textViewViewFoodBlank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/textViewViewFoodEnergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:fontFamily="@font/arialbold"
                    android:gravity="center"
                    android:text="@string/energy" />

                <TextView
                    android:id="@+id/textViewViewFoodProteins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:fontFamily="@font/arialbold"
                    android:gravity="center"
                    android:text="@string/proteins" />

                <TextView
                    android:id="@+id/textViewViewFoodCarbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:fontFamily="@font/arialbold"
                    android:gravity="center"
                    android:text="@string/carbs" />

                <TextView
                    android:id="@+id/textViewViewFoodFat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:fontFamily="@font/arialbold"
                    android:gravity="center"
                    android:text="@string/fat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textViewViewFoodBlankPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:fontFamily="@font/arialbold"
                    android:text="@string/per_hundred_gran" />

                <TextView
                    android:id="@+id/textViewViewFoodEnergyPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:gravity="center"
                    android:text="@string/energy" />

                <TextView
                    android:id="@+id/textViewViewFoodProteinsPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:gravity="center"
                    android:text="@string/proteins" />

                <TextView
                    android:id="@+id/textViewViewFoodCarbsPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:gravity="center"
                    android:text="@string/carbs" />

                <TextView
                    android:id="@+id/textViewViewFoodFatPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:gravity="center"
                    android:text="@string/fat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textViewViewFoodBlankPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:fontFamily="@font/arialbold"
                    android:text="@string/per_meal" />

                <TextView
                    android:id="@+id/textViewViewFoodEnergyPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:gravity="center"
                    android:text="@string/per_meal" />

                <TextView
                    android:id="@+id/textViewViewFoodProteinsPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:gravity="center"
                    android:text="@string/proteins" />

                <TextView
                    android:id="@+id/textViewViewFoodCarbsPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:gravity="center"
                    android:text="@string/carbs" />

                <TextView
                    android:id="@+id/textViewViewFoodFatPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:gravity="center"
                    android:text="@string/fat" />
            </TableRow>
        </TableLayout>
        <!-- //Calories table -->
    </LinearLayout>
</ScrollView>