<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_color"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp">


        <!-- Status -->
        <TextView
            android:id="@+id/textViewGoalCurrentStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="18sp"
            android:fontFamily="@font/arialbold"
            android:textColor="@color/titleColor"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Current weight -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalCurrentWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:fontFamily="@font/arialbold"/>

                <TextView
                    android:id="@+id/textViewGoalCurrentWeightNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/kg" />

            </TableRow>
            <!-- //Current weight -->

            <!-- Current weight -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalTargetWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/target"
                    android:fontFamily="@font/arialbold"/>

                <TextView
                    android:id="@+id/textViewGoalCurrentTargetNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/kg" />

            </TableRow>
            <!-- //Current weight -->

            <!-- Method -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/method"
                    android:fontFamily="@font/arialbold"/>

                <TextView
                    android:id="@+id/textViewGoalMethodText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="Lose 0.5 kg week" />

            </TableRow>
            <!-- //Method -->

            <!-- Activity level -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity"
                    android:fontFamily="@font/arialbold"/>

                <TextView
                    android:id="@+id/textViewActivityLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/activity_level" />

            </TableRow>
            <!-- //Activity level -->


        </TableLayout>
        <!-- //Status -->




        <!-- Numbers -->
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:stretchColumns="1">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/textViewGoalNumbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/numbers"
                    android:textSize="18sp"
                    android:fontFamily="@font/arialbold"
                    android:textColor="@color/titleColor"/>
            </TableRow>
        </TableLayout>
        <!-- //Numbers -->

        <!-- I want to loose -->
        <TextView
            android:id="@+id/textViewGoalNumbersIfYouWantToLooseWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/if_you_want_to_loose_weight"
            android:textSize="16sp"
            />
        <!-- //I want to loose -->


        <!-- I want to loose table layout -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Headcell -->
            <TableRow
                android:id="@+id/textViewGoalMethodRowA"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/textViewGoalHeadcellEnergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/energy"
                    android:fontFamily="@font/arialbold"/>


            </TableRow>
            <!-- //Headcell -->

            <!-- Loose with out activity -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalMethodDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/without_activity"
                    android:fontFamily="@font/arialbold"/>

                <TextView
                    android:id="@+id/textViewGoalEnergyDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/energy" />


            </TableRow>
            <!-- //Loose with out activity -->

            <!-- Loose with acitivty -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalMethodWithActivityAndDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/with_activity_"
                    android:fontFamily="@font/arialbold"/>

                <TextView
                    android:id="@+id/textViewGoalEnergyWithActivityAndDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/energy" />


            </TableRow>
            <!-- //With activity -->
        </TableLayout>


        <TextView
            android:id="@+id/textViewGoalNumbersIfYouWantToKeepYourWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/if_you_want_to_keep_your_weight"
            android:textSize="16sp"
            />



        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Headcell -->
            <TableRow
                android:id="@+id/textViewGoalMethodRowB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewGoalMethodB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/textViewGoalHeadcellEnergyB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:fontFamily="@font/arialbold"
                    android:text="@string/energy" />


            </TableRow>
            <!-- //Headcell -->
            <!-- BMR -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalMethodBMR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/without_activity"
                    android:fontFamily="@font/arialbold"/>

                <TextView
                    android:id="@+id/textViewGoalEnergyBMR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/energy" />


            </TableRow>
            <!-- //BMR -->



            <!-- with activity -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalMethodWithActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/with_activity_"
                    android:fontFamily="@font/arialbold"/>

                <TextView
                    android:id="@+id/textViewGoalEnergyWithActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/energy" />

            </TableRow>
            <!-- //With activity -->

        </TableLayout>
        <!-- //Numbers -->

    </LinearLayout>

</ScrollView>