<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <!-- Text -->

        <TextView
            android:id="@+id/textViewDeleteMessage"
            android:layout_width="match_parent"
            android:layout_marginStart="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_delete" />
        <!-- //Text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="100dp"
                android:background="@drawable/ripple_effect_outline"
                android:fontFamily="@font/arialmedium"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/buttonConfirmDelete"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/button_style"
                android:fontFamily="@font/arialmedium"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>