<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp">

        <!-- Text -->

        <TextView
            android:id="@+id/textViewDeleteMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_delete" />
        <!-- //Text -->

        <!-- Table layout -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <!-- Submit buttons -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center">
                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/cancel"
                    android:background="@drawable/ripple_effect_outline"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/buttonConfirmDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/delete"
                    android:gravity="center"
                    android:background="@drawable/button_style"
                    android:layout_marginStart="10sp"/>
            </TableRow>
            <!-- //Submit button -->
        </TableLayout>

    </LinearLayout>

</ScrollView>